	(Pupdate_symsearch): Populate it, if possible.
	(sym_search_iter_t): State for the symbol search iterator.
	(sym_search_next): New, symbol search iterator following
	search paths.
	(Pxlookup_by_name_internal): Use it rather than counting.  Global
	searches no longer iterate over the whole list, but over the
	executable's symbol search path. Call Pupdate_symsearch() when
	doing global searches.

2013-03-26  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace-utils.spec (Requires): Ask for 32-bit dependencies
	correctly.

2013-03-20  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_debug.c: New file, ring-buffer-based signal-to-dump
	debugging machinery.
	* libdtrace/dt_debug.h: Header for it.
	* libdtrace/Build: Add it, and reflow libdtrace-build_SOURCES.

	* libdtrace/dt_open.c (_dtrace_rdvers): Remove, unused.
	(dtrace_close): Flush the ring buffer.
	(_dtrace_init): rd_init() no longer exists: do not use it. Move to
	dt_debug.c, and rename to _dtrace_debug_init.
	* libdtrace/dt_subr.c (dt_dprintf): Move to dt_debug.c, and
	reimplement in terms of new lower-level dt_debug_printf().
	* libdtrace/dt_impl.h: Inlude dt_debug.h.  Move debugging prototypes
	there.

	* libproc/libproc.h (_libproc_debug): Remove.
	* libproc/Pcontrol.c (_libproc_debug): Likewise.
	(_libproc_init): Likewise.
	(_dprintf): Reimplement in terms of dt_debug_printf().
	(Prelease): Flush the ring buffer.

	* libdtrace/dtrace.h (dtrace_debug_set_dump_sig): New public
	interface.
	* libdtrace/libdtrace.ver: Add it.
	* INCOMPATIBILITIES: Mention it.

	* test/triggers/libproc-dlmadopen.c: Do not dlmopen() unless
	MANY_LMIDS is set.
	* test/triggers/libproc-consistency.c: Expect fewer
	dlopen()/dlclose() calls when MANY_LMIDS is set.  Do not use
	nonzero lmids as a trigger to suppress log output if MANY_LMIDS is
	not set.
	* test/unittest/libproc/tst.lmid-consistency.sh: New test,
	testing nonzero lmid link map consistency, setting MANY_LMIDS.